Store as flattened array