@@ -1,41 +1,28 @@
 package com.onyxdevtools.ai.compute
 
-import com.onyxdevtools.ai.Matrix
+import com.onyxdevtools.ai.Tensor
 import jdk.incubator.vector.FloatVector
-import jdk.incubator.vector.VectorOperators
 import jdk.incubator.vector.VectorSpecies
 import java.util.stream.IntStream
+import kotlin.math.min
 
 /**
- * High-performance CPU compute backend that extends BasicCPUComputeBackend 
- * with SIMD vectorization and other optimizations for maximum performance 
+ * High-performance CPU compute backend that extends BasicCPUComputeBackend
+ * with SIMD vectorization and other optimizations for maximum performance
  * on modern CPUs that support the Java Vector API.
- * 
+ *
  * This backend uses:
  * - Java Vector API for SIMD operations (falls back to basic implementation if not available)
  * - Cache-friendly algorithms
  * - Multi-threading for large operations
  * - Optimized memory access patterns
- * 
+ *
  * Falls back to BasicCPUComputeBackend implementation if Java Vector API is not available.
  */
 open class CPUComputeBackend : BasicCPUComputeBackend() {
 
-    // Vector API Specifications
-    private val FLOAT_SPEC: VectorSpecies<Float>? by lazy {
-        try {
-            FloatVector.SPECIES_PREFERRED
-        } catch (e: Throwable) {
-            // Vector API not available, will use basic implementations
-            null
-        }
-    }
-
     // Performance constants
     private companion object {
-        // Threshold for using basic sequential multiplication (total operations)
-        const val SIMPLE_WORK_MAX = 4_000_000L
-
         /**
          * Check if the Java Vector API is available on this platform
          */
@@ -48,134 +35,141 @@ open class CPUComputeBackend : BasicCPUComputeBackend() {
             }
         }
     }
-    
-    override fun matrixMultiply(a: Matrix, b: Matrix): Matrix {
-        require(a[0].size == b.size) { 
-            "Matrix dimensions don't match for multiplication: ${a.size}x${a[0].size} * ${b.size}x${b[0].size}" 
+
+    override fun matrixMultiply(a: Tensor, b: Tensor): Tensor {
+        require(a[0].size == b.size) {
+            "Matrix dimensions don't match for multiplication: ${a.size}x${a[0].size} * ${b.size}x${b[0].size}"
         }
 
         val m = a.size.toLong()
+        val k = a[0].size.toLong()
+        val n = b[0].size.toLong()
+        val operations = m * k * n
 
-        // If Vector API is not available, fall back to basic implementation
-        if (FLOAT_SPEC == null) {
-            return if (m <= 15) {
-                matrixMultiplyBasic(a, b)
-            } else {
-                matrixMultiplyParallelJVM(a, b)
-            }
-        }
-
-        return if (m <= 10) {
-            matrixMultiplyBasic(a, b)
-        } else if (isVectorAPIAvailable) {
-            matrixMultiplySkinnyVectorizedParallel(a,b)
-        } else {
-            matrixMultiplyParallelJVM(a, b)
+        return when {
+            operations <= 50_000 -> super.matrixMultiply(a, b)
+            isVectorAPIAvailable -> matrixMultiplyParallelJVM(a, b)
+            else -> matrixMultiplyParallelVector(a, b)
         }
     }
 
-    internal fun matrixMultiplyParallelJVM(A: Matrix, B: Matrix): Matrix {
+    /**
+     * Parallel matrix multiplication using CPU cores.
+     * Splits rows across threads and uses K-tiling to improve cache locality.
+     */
+    internal fun matrixMultiplyParallelJVM(
+        A: Tensor,
+        B: Tensor,
+        cpus: Int = Runtime.getRuntime().availableProcessors()
+    ): Tensor {
         val m = A.size
         val k = A[0].size
         val n = B[0].size
+        require(k == B.size) { "Inner dimensions must match: A=${m}x${k}, B=${B.size}x${n}" }
 
-        val result = Array(m) { FloatArray(n) }
+        val C = Tensor(m, n) { _, _ -> 0f }
 
-        val blockSize = 64
-        // Always parallelize if work is above SIMPLE_WORK_MAX
-        // The transposeParallelTiled is already parallelized
-        val BTransposed = transposeParallelTiled(B)
-        val numRowBlocks = (m + blockSize - 1) / blockSize
+        val aArr = A.data
+        val bArr = B.data
+        val cArr = C.data
 
-        IntStream.range(0, numRowBlocks).parallel().forEach { blockIndex ->
-            val rowStart = blockIndex * blockSize
-            val rowEnd = minOf(rowStart + blockSize, m)
+        val threads = cpus.coerceAtLeast(1)
+        val rowsPerThread = (m + threads - 1) / threads
 
-            for (colStart in 0 until n step blockSize) {
-                val colEnd = minOf(colStart + blockSize, n)
+        IntStream.range(0, threads).parallel().forEach { t ->
+            val rStart = t * rowsPerThread
+            val rEnd = min(m, rStart + rowsPerThread)
 
-                for (kStart in 0 until k step blockSize) {
-                    val kEnd = minOf(kStart + blockSize, k)
+            var r = rStart
+            while (r < rEnd) {
+                val aBase = r * k
+                val cBase = r * n
 
-                    for (rowIndex in rowStart until rowEnd) {
-                        for (colIndex in colStart until colEnd) {
-                            var dotProduct = 0.0f
-                            for (kIndex in kStart until kEnd) {
-                                dotProduct += A[rowIndex][kIndex] * BTransposed[colIndex][kIndex]
-                            }
-                            result[rowIndex][colIndex] = result[rowIndex][colIndex] + dotProduct
-                        }
+                var s = 0
+                while (s < k) {
+                    val aVal = aArr[aBase + s]   // A[r, s]
+                    var bIdx = s * n             // B[s, 0]
+                    var cIdx = cBase             // C[r, 0]
+                    var c = 0
+                    while (c < n) {
+                        cArr[cIdx] += aVal * bArr[bIdx]
+                        c++; bIdx++; cIdx++
                     }
+                    s++
                 }
+                r++
             }
         }
-        return result
+
+        return C
     }
 
-    internal fun transposeParallelTiled(B: Array<FloatArray>, tile: Int = 64): Array<FloatArray> {
-        val k = B.size
-        val n = B[0].size
-        val Bt = Array(n) { FloatArray(k) }
-
-        val tCols = (n + tile - 1) / tile
-        val tRows = (k + tile - 1) / tile
-
-        IntStream.range(0, tCols).parallel().forEach { tj ->
-            val j0 = tj * tile
-            val j1 = minOf(n, j0 + tile)
-            var ti = 0
-            while (ti < tRows) {
-                val i0 = ti * tile
-                val i1 = minOf(k, i0 + tile)
-                var i = i0
-                while (i < i1) {
-                    val src = B[i]
-                    var j = j0
-                    while (j < j1) {
-                        Bt[j][i] = src[j]
-                        j++
-                    }
-                    i++
-                }
-                ti++
-            }
-        }
-        return Bt
-    }
-
-    internal fun matrixMultiplySkinnyVectorizedParallel(A: Matrix, B: Matrix): Matrix {
+    /**
+     * Parallel + SIMD (Java Vector API) matrix multiply.
+     * - Parallelized by rows using IntStream.parallel()
+     * - Vectorized across the N (output columns) dimension with FloatVector
+     *
+     * Requires: --add-modules jdk.incubator.vector (JDK 21+).
+     */
+    internal fun matrixMultiplyParallelVector(
+        A: Tensor,
+        B: Tensor,
+        cpus: Int = Runtime.getRuntime().availableProcessors()
+    ): Tensor {
         val m = A.size
         val k = A[0].size
         val n = B[0].size
+        require(k == B.size) { "Inner dimensions must match: A=${m}x${k}, B=${B.size}x${n}" }
 
-        val Bt = transposeParallelTiled(B, tile = 64)
+        val tensor = Tensor(m, n) { _, _ -> 0f }
 
-        val result = Array(m) { FloatArray(n) }
-        val species = FLOAT_SPEC!!
-        val L = species.length()
+        val aArr: FloatArray = A.data
+        val bArr: FloatArray = B.data
+        val cArr: FloatArray = tensor.data
 
-        IntStream.range(0, m).parallel().forEach { i ->
-            val aRow = A[i]
-            var j = 0
-            while (j < n) {
-                val btRow = Bt[j]
-                var p = 0
-                var accVec = FloatVector.zero(species)
-                while (p + L <= k) {
-                    val av = FloatVector.fromArray(species, aRow, p)
-                    val bv = FloatVector.fromArray(species, btRow, p)
-                    accVec = av.fma(bv, accVec)
-                    p += L
+        val species: VectorSpecies<Float> = FloatVector.SPECIES_PREFERRED
+        val VL = species.length()
+
+        val threads = cpus.coerceAtLeast(1)
+        val rowsPerThread = (m + threads - 1) / threads
+
+        IntStream.range(0, threads).parallel().forEach { t ->
+            val rStart = t * rowsPerThread
+            val rEnd = min(m, rStart + rowsPerThread)
+
+            var r = rStart
+            while (r < rEnd) {
+                val aBase = r * k
+                val cBase = r * n
+
+                val fullN = species.loopBound(n)
+                val hasTail = fullN < n
+                val tailMask = if (hasTail) species.indexInRange(fullN, n) else null
+
+                var s = 0
+                while (s < k) {
+                    val aVal = aArr[aBase + s]
+                    val vA = FloatVector.broadcast(species, aVal)
+                    val bRowBase = s * n
+
+                    var c = 0
+                    while (c < fullN) {
+                        val vB = FloatVector.fromArray(species, bArr, bRowBase + c)
+                        val vC = FloatVector.fromArray(species, cArr, cBase + c)
+                        vB.fma(vA, vC).intoArray(cArr, cBase + c)
+                        c += VL
+                    }
+                    if (hasTail) {
+                        val vB = FloatVector.fromArray(species, bArr, bRowBase + fullN, tailMask)
+                        val vC = FloatVector.fromArray(species, cArr, cBase + fullN, tailMask)
+                        vB.fma(vA, vC).intoArray(cArr, cBase + fullN, tailMask)
+                    }
+                    s++
                 }
-                var acc = accVec.reduceLanes(VectorOperators.ADD)
-                while (p < k) {
-                    acc += aRow[p] * btRow[p]
-                    p++
-                }
-                result[i][j] = acc
-                j++
+                r++
             }
         }
-        return result
+
+        return tensor
     }
 }
